# sculpt-vr

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  common.h  framebuffer.h  hand.cc  hand.h  leapmotion.cc  leapmotion.h  main.cc  mesh.h  oculusvr.cc  oculusvr.h  plane.cc  plane.h  shader.cc  shader.h  sphere.cc  sphere.h  volume.cc  volume.h
CMake/: FindLeap.cmake  FindOVR.cmake
dependencies/: README
shader/: hand.fs  hand.vs  model.fs  model.vs  plane.fs  plane.vs
